--- a/FlyerWPFPrototype/FlyerWPFPrototype/FlyerWPFPrototype.csproj
+++ b/FlyerWPFPrototype/FlyerWPFPrototype/FlyerWPFPrototype.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FlyerWPFPrototype</RootNamespace>
     <AssemblyName>FlyerWPFPrototype</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -29,6 +29,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -164,6 +165,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>FoodGiantSQLDatabase.mdf</DependentUpon>
     </Content>
+    <None Include="Flyer Templates\TemplatePage1.cshtml" />
     <Resource Include="Images\cocacola1.png" />
     <Resource Include="Images\cocacola2.png" />
     <Resource Include="Images\cocacola3.jpg" />
