(U) Check in of design documents and final prototype

--- a/FlyerWPFPrototype/FlyerWPFPrototype/FlyerWPFPrototype.csproj
+++ b/FlyerWPFPrototype/FlyerWPFPrototype/FlyerWPFPrototype.csproj
@@ -51,7 +51,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\FlyerWPFPrototype.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>
