SR 2.1, 2.3, 2.4.  Updated DB and DatabaseInterface to add new items. Majority of DatabaseMaintainer done, need styling before complete.  Cleaned up code per Coding Standards.

--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
@@ -168,11 +168,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Database\FoodGiantSQLDatabase.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Database\FoodGiantSQLDatabase.mdf" />
     <Content Include="Database\FoodGiantSQLDatabase_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>FoodGiantSQLDatabase.mdf</DependentUpon>
     </Content>
     <Resource Include="Program Images\foodgiant_logo.png" />
