SRS 1.2 Refined DefaultStyle, FlyerItem classes, FlyerCreator classes. Added Stub classes for GenerateFlyer.  FlyerCreator still needs store dates before completion

--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
@@ -87,12 +87,17 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DatabaseInterface.cs" />
+    <Compile Include="Model\FlyerSettingsModel.cs" />
     <Compile Include="Model\FlyerDataModel.cs" />
+    <Compile Include="ViewModel\GenericFlyerViewModel.cs" />
     <Compile Include="ViewModel\DatabaseMaintainerViewModel.cs" />
     <Compile Include="ViewModel\FlyerItemViewModel.cs" />
     <Compile Include="ViewModel\FlyerCreatorViewModel.cs" />
     <Compile Include="ViewModel\ProgramSelectorViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
+    <Compile Include="View\GenericFlyerView.xaml.cs">
+      <DependentUpon>GenericFlyerView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\DatabaseMaintainerView.xaml.cs">
       <DependentUpon>DatabaseMaintainerView.xaml</DependentUpon>
     </Compile>
@@ -108,6 +113,10 @@
     <Page Include="Themes\DefaultStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\GenericFlyerView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\DatabaseMaintainerView.xaml">
       <Generator>MSBuild:Compile</Generator>
