SR 1.2 Next commit before GenerateFlyer edits, bindings set up. Plans for control class for all future flyers set up

--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
@@ -110,6 +110,10 @@
     <Compile Include="View\BaseView.xaml.cs">
       <DependentUpon>BaseView.xaml</DependentUpon>
     </Compile>
+    <Page Include="Themes\BasicFlyerStyle.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Themes\DefaultStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
