SR 1.3. Printing Flyer adds data to flyer history database automatically.  Updated DatabaseInterface to add and return flyer data

--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator.csproj
@@ -89,6 +89,7 @@
     </ApplicationDefinition>
     <Compile Include="DatabaseInterface.cs" />
     <Compile Include="Driver.cs" />
+    <Compile Include="Model\FlyerHistoryModel.cs" />
     <Compile Include="Model\FlyerSettingsModel.cs" />
     <Compile Include="Model\FlyerDataModel.cs" />
     <Compile Include="ViewModel\FlyerHistoryViewModel.cs" />
